tests/negative/ArgNameDefaultValue.juvix
module ArgNameDefaultValue;

type T := mkT;

f {x : T := x} : T := mkT;
